projects/01-blog-sidebar-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    background-color: #F9F9F7;
    font-family: "Inter", sans-serif;
    line-height: 1.6;
    min-height: 100vh;
}
:is(h1,h2,h3,h4){
    font-family: "Montserrat";
    font-weight: 700;

}
.site-header{
    background-color: #FCFCFB;
    border-bottom: 2px solid #e1e1df;
    padding: 15px 30px;
    top: 0;
    position: sticky;
    z-index: 99999;
    overflow: auto;
}

/* ======= MAIN HEADLINE ======== */
.site-header .site-header__title{
    background: linear-gradient(to right, #111827, #2D1E18);
    color: transparent;
    background-clip: text;
    float: left;
}

/* ============  NAVBAR ============ */
.site-header .site-header__nav{
    float: right;
}
.site-header .site-header__nav .nav-list{
    list-style: none;
    margin-top: 10px;
}

.site-header .site-header__nav .nav-list li{
    display: inline-block;
    margin-right: 30px;
}
.site-header .site-header__nav .nav-list li a{
    text-decoration: none;
    font-weight: bold;
    color: #1c5aab;
    padding: 10px;
    transition: 0.4s;
}

/* Hover Effect */
.site-header .site-header__nav .nav-list li a:hover{
    background-color: #e8e8e8;
    border-radius: 15px;
    color: #0a71f8;
}


/* ========== MAIN CONTENT =========== */

main .page-layout{
    /* overflow: hidden; */
    display: table;
    width: 100%;
}
/* ------- SIDE BAR ----------- */
main .sidebar{
    float: left;
    width: 330px;
    line-height: 2;
    padding: 20px;
    border-right: 2px solid #e1e1df;
    border-bottom: 2px solid #e1e1df;
    border-radius: 0 0 15px 0 ;
    background-color: #FCFCFB;
    margin-right: 40px;
    
    position: sticky;
    top: 65px;

    display: table-cell;
    vertical-align: top;
}

main .sidebar .sidebar__list{
    margin-bottom: 30px;
}
main .sidebar .sidebar__title, main .content .sidebar__title{
    text-transform: uppercase;
    font-size: 18px;
    letter-spacing: 1px;
    color: #747475;
    font-weight: bold;
}

/* Side bar list */
main .sidebar .sidebar__list{
    list-style: none;
} 
main .sidebar .sidebar__list li a{
    text-decoration: none;
    font-weight: 400;
    color: #184F95;
    padding: 4px;
    transition: 0.2s;
}

main .sidebar .sidebar__list li a:hover{
    color: #0a71f8;
    font-weight: bold;
    transform: translateY(-10px);
}
footer{
    clear: both;
    padding: 20px 0;
    border-top: 2px solid #e1e1df;
    /* margin-top: 100px; */
    text-align: center;
    color: #747475;
}

/* ----------- RELATED CATEGORY SIDEBAR CONTENT --------- */

main .sidebar .related-post .related-post-content{
    background-color: #f3f3f2;
    margin-bottom: 20px;
    padding: 20px;
    border-radius: 10px;
    display: table;
}

main .sidebar .related-post .related-post-content .content-description{
    display: table-cell;
    vertical-align: top;
}
/* Related Blog for the Category Image  */
main .sidebar .related-post .related-post-content .related-post-image img{
    width: 80px;
    height: 80px;
    float: left;
    margin-right: 20px;
    margin-bottom: 10px;
}

main .sidebar .related-post .related-post-content p{
    line-height: normal;
    font-size: 12px;
}

main .sidebar .related-post .related-post-content h4{
    font-size: 15px;
    line-height: normal;
}

/* ====== MAIN CONTENT ========= */
main .content{
    background-color: #F8F8F6;
    display: table-cell;
    vertical-align: top;
    padding: 20px 30px;
}

/* Content Headline  */
main .content .content-headline{
    margin-bottom: 40px;
}
main .content .content-headline .content__meta{
    color: #747475;
}

/* Head Image */
main .content .content-headline .head-image{
    max-width: 100%;
    text-align: center;
    margin: 40px 0;
}
main .content .content-headline .head-image img{
    width: 600px;
    height: auto;
    object-fit: cover;
}
/* Content  */
main .content .content-wrapper{
    margin-bottom: 80px;
}

main .content .content-wrapper h2{
    margin-bottom: 30px;
}

main .content .content-wrapper .content__paragraph{
    margin-bottom: 20px;
    line-height: 2;
}
main .content .content-wrapper .content__paragraph span{
    font-weight: bold;
}



/* ======== RECOMENDATION BLOG SECTION ========= */
main .populer-post .blog-box{
    background-color: #e8e8e8;
    display: inline-block;
    width: 400px;
    border-radius: 20px;
    overflow: auto;
    margin-right: 10px;
}
main .populer-post .blog-box .blog-item{
    overflow: hidden;
    
}
main .populer-post .blog-item img{
    width: 150px;
    object-fit: cover;
    float: left;
    margin-right: 20px;
    margin-bottom: 10px;
}

main .populer-post .blog-item figcaption{
    padding: 15px;
}

main .populer-post .blog-item figcaption h4{
    line-height: normal;
}
main .populer-post .blog-item figcaption p{
    font-size: 15px;
    line-height: 1.3;
}

